Изменил стиль страницы регистрации больницы, поправил js-код. Убрал лишнюю аннотацию ignore для поля больницы в заявке.

--- a/src/main/resources/templates/hospitals/hospital-registration-form.html
+++ b/src/main/resources/templates/hospitals/hospital-registration-form.html
@@ -7,16 +7,21 @@
         <title>Регистрация медицинского учреждения</title>
         <link href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
         <link href="../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
+        <link rel="apple-touch-icon" sizes="180x180" href="../static/favicon/apple-touch-icon.png" th:href="@{/favicon/apple-touch-icon.png}" />
+        <link rel="icon" type="image/png" sizes="32x32" href="../static/favicon/favicon-32x32.png" th:href="@{/favicon/favicon-32x32.png}" />
+        <link rel="icon" type="image/png" sizes="16x16" href="../static/favicon/favicon-16x16.png" th:href="@{/favicon/favicon-16x16.png}" />
     </head>
 
     <body class="min-vh-100 d-flex flex-column align-items-center justify-content-center bg-main">
-        <!-- Основная часть страницы -->
+        <!---->
+        <div th:replace="~{/fragments/headers/anon-header :: anon-header}"></div>
+
         <div class="container my-5">
-            <div class="row">
+            <div class="row mb-5">
                 <div class="col-12">
-                    <form action="#" th:action="@{/rest/hospital-registration-requests/save}" method="post" class="bg-gray-200 border rounded text-secondary fs-5 p-3" id="hospital-registration-form">
+                    <form action="#" th:action="@{/rest/hospital-registration-requests/save}" method="post" class="bg-dark border rounded text-gray-300 fs-5 p-3" id="hospital-registration-form">
                         <h2 class="fs-4">Заявка на регистрацию медицинского учреждения</h2>
-                        <hr class="mb-1" />
+                        <hr class="text-white mb-1" />
                         <div class="d-flex flex-row flex-wrap align-items-center justify-content-center mb-3">
                             <div class="flex-grow-1 m-1">
                                 <label for="lastname" class="form-label">Фамилия <span class="text-danger fs-6"> *</span></label>
@@ -31,15 +36,15 @@
                                 <input type="text" name="patronymic" id="patronymic" class="form-control" placeholder="Иванович" />
                             </div>
                         </div>
-                        <div class="mb-3">
+                        <div class="m-1 mb-3">
                             <label for="hospital-name" class="form-label">Полное наименование медицинского учреждения <span class="text-danger fs-6"> *</span></label>
                             <input type="text" name="hospitalName" id="hospital-name" class="form-control" placeholder="Национальный медицинский исследовательский центр имени В. А. Алмазова" />
                         </div>
-                        <div class="mb-3">
+                        <div class="m-1 mb-3">
                             <label for="post" class="form-label">Ваша должность в этом медицинском учреждении <span class="text-danger fs-6"> *</span></label>
                             <input type="text" name="post" id="post" class="form-control" placeholder="Главный врач" />
                         </div>
-                        <div class="d-flex flex-row flex-wrap align-items-center justify-content-center mb-3">
+                        <div class="d-flex flex-row flex-wrap align-items-center justify-content-center m-1 mb-3">
                             <div class="flex-grow-1 m-1">
                                 <label for="passport" class="form-label">Серия и номер паспорта <span class="text-danger fs-6"> *</span></label>
                                 <input type="text" name="passport" id="passport" class="form-control" placeholder="3012 981322" />
@@ -49,26 +54,35 @@
                                 <input type="text" name="phoneNumber" id="phone-number" class="form-control" placeholder="890231214560" />
                             </div>
                         </div>
-                        <div class="mb-3">
+                        <div class="m-1 mb-3">
                             <label for="email" class="form-label">Почта, на которую придёт код регистрации в приложении <span class="text-danger fs-6"> *</span></label>
                             <input type="email" name="email" id="email" class="form-control" placeholder="example@mail.com" />
                         </div>
-                        <div class="mb-4">
+                        <div class="m-1 mb-4">
                             <label for="comment" class="form-label">Комментарий к заявке</label>
                             <textarea name="comment" id="comment" class="form-control" rows="3" placeholder="Здесь вы можете написать, для чего вы оставляете данную заявку"></textarea>
                         </div>
-                        <hr />
-                        <button type="submit" class="btn btn-lg btn-primary mt-1">Отправить</button>
+                        <hr class="text-white" />
+                        <button type="submit" class="btn btn-lg btn-primary my-1">Отправить</button>
                     </form>
                 </div>
             </div>
+
+            <div class="row text-center">
+                <div class="col-12 col-md-9 col-lg-6 mx-auto">
+                    <a href="#" th:href="@{/}" class="text-dark fs-4">Вернуться на главную</a>
+                </div>
+            </div>
         </div>
-        <!-- Модальное окно для сообщений об ошибке -->
+
         <div th:replace="~{/fragments/modal/error-modal :: error-modal}"></div>
-        <!-- Модальное окно для сообщений об успехе -->
+
         <div th:replace="~{/fragments/modal/success-modal :: success-modal}"></div>
-        <!-- Скрипты -->
+
+        <div th:replace="~{/fragments/footers/footer :: footer}"></div>
+
         <script src="../../static/js/hospitals/hospital-registration-form.js" th:src="@{/js/hospitals/hospital-registration-form.js}"></script>
         <script src="../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
+        <!---->
     </body>
 </html>
