Поправил страницы, начал правку страницы регистрации администратора.

--- a/src/main/resources/templates/hospitals/hospital-registration-form.html
+++ b/src/main/resources/templates/hospitals/hospital-registration-form.html
@@ -69,7 +69,7 @@
             </div>
 
             <div class="row text-center">
-                <div class="col-12 col-md-9 col-lg-6 mx-auto">
+                <div class="col-12 mx-auto">
                     <a href="#" th:href="@{/}" class="text-dark fs-4">Вернуться на главную</a>
                 </div>
             </div>
