--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,8 @@
         <!---->
         <div th:replace="~{/fragments/headers/anon-header :: anon-header}"></div>
 
-        <div class="container">
+        <div class="container my-5">
+            <!---->
             <div th:if="${param.logout}" class="row mb-5">
                 <div class="col-12 col-md-9 col-lg-6 mx-auto">
                     <div class="text-center fs-4 info-block rounded h-100">
@@ -57,6 +58,7 @@
                     <a href="#" th:href="@{/}" class="text-dark fs-4">Вернуться на главную</a>
                 </div>
             </div>
+            <!---->
         </div>
 
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
