Поменял стиль текста на главной странице.

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
 
-            <div class="row mb-5">
+            <div class="row text-secondary mb-5">
                 <div class="col-12">
                     <div class="fs-5">
                         <p>
