Добавил placeholder-ы на страницу логина.

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -41,11 +41,11 @@
                         <hr class="text-white" />
                         <div class="mb-3">
                             <label for="email" class="form-label">Почта</label>
-                            <input type="email" name="email" id="email" class="form-control" />
+                            <input type="email" name="email" id="email" class="form-control" placeholder="some@someEmail" />
                         </div>
                         <div class="mb-4">
                             <label for="password" class="form-label">Пароль</label>
-                            <input type="password" name="password" id="password" class="form-control" />
+                            <input type="password" name="password" id="password" class="form-control" placeholder="12someStrong!password89" />
                         </div>
                         <hr class="text-white" />
                         <button type="submit" class="text-center btn btn-lg btn-primary my-1">Войти</button>
