--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -61,7 +61,12 @@
             <!---->
         </div>
 
+        <div th:replace="~{/fragments/modal/code-input-modal :: code-input-modal}"></div>
+
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
+
+        <script src="../static/js/code-check.js" th:src="@{/js/code-check.js}"></script>
+        <script src="../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
         <!---->
     </body>
 </html>
