--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -65,37 +65,11 @@
             <!---->
         </div>
 
-        <div class="modal fade" id="code-input-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-4">Ввод кода</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body fs-5">
-                        <div class="mb-2 mt-1" id="code-input-error" style="display: none">
-                            <div class="text-center fs-5 danger-block rounded h-100">
-                                <p class="mb-1 my-auto">Неверный код</p>
-                            </div>
-                        </div>
-                        <form action="#" th:action="@{/rest/security-codes/check}" method="post" id="code-input-form" class="mb-2">
-                            <div class="mb-3">
-                                <label for="code" class="form-label">Введите код регистрации</label>
-                                <input type="text" name="code" id="code" class="form-control" placeholder="dkjf-dsfj37-127sj-12s72j-1sju" />
-                            </div>
-                            <button type="submit" class="btn btn-primary">Отправить</button>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div th:replace="~{/fragments/modal/code-input-modal :: code-input-modal}"></div>
 
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
 
-        <script src="../static/js/main.js" th:src="@{/js/main.js}"></script>
+        <script src="../static/js/code-check.js" th:src="@{/js/code-check.js}"></script>
         <script src="../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
         <!---->
     </body>
