--- a/src/main/resources/templates/registration/registration.html
+++ b/src/main/resources/templates/registration/registration.html
@@ -110,8 +110,11 @@
 
         <div th:replace="~{/fragments/modal/success-modal :: success-modal}"></div>
 
+        <div th:replace="~{/fragments/modal/code-input-modal :: code-input-modal}"></div>
+
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
 
+        <script src="../../static/js/code-check.js" th:src="@{/js/code-check.js}"></script>
         <script src="../../static/js/registration/registration.js" th:src="@{/js/registration/registration.js}"></script>
         <script src="../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
         <!---->
