--- a/src/main/resources/templates/hospitals/hospital-registration-form.html
+++ b/src/main/resources/templates/hospitals/hospital-registration-form.html
@@ -17,10 +17,15 @@
         <div th:replace="~{/fragments/headers/anon-header :: anon-header}"></div>
 
         <div class="container my-5">
+            <!---->
+            <div class="row text-center mb-5">
+                <h1 class="text-dark fs-2 word-wrap">Заявка на регистрацию медицинского учреждения</h1>
+            </div>
+
             <div class="row mb-5">
                 <div class="col-12">
                     <form action="#" th:action="@{/rest/hospital-registration-requests/save}" method="post" class="bg-dark border rounded text-gray-300 fs-5 p-3" id="hospital-registration-form">
-                        <h2 class="fs-4">Заявка на регистрацию медицинского учреждения</h2>
+                        <h2 class="fs-4">Заявка</h2>
                         <hr class="text-white mb-1" />
                         <div class="d-flex flex-row flex-wrap align-items-center justify-content-center mb-3">
                             <div class="flex-grow-1 m-1">
@@ -73,6 +78,7 @@
                     <a href="#" th:href="@{/}" class="text-dark fs-4">Вернуться на главную</a>
                 </div>
             </div>
+            <!---->
         </div>
 
         <div th:replace="~{/fragments/modal/error-modal :: error-modal}"></div>
