--- a/src/main/resources/templates/hospitals/hospital-registration-request.html
+++ b/src/main/resources/templates/hospitals/hospital-registration-request.html
@@ -4,78 +4,94 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Поданная заявка на регистрацию медицинского учреждения</title>
+        <title>Заявка на регистрацию медицинского учреждения</title>
         <link href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
         <link href="../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
+        <link rel="apple-touch-icon" sizes="180x180" href="../../static/favicon/apple-touch-icon.png" th:href="@{/favicon/apple-touch-icon.png}" />
+        <link rel="icon" type="image/png" sizes="32x32" href="../../static/favicon/favicon-32x32.png" th:href="@{/favicon/favicon-32x32.png}" />
+        <link rel="icon" type="image/png" sizes="16x16" href="../../static/favicon/favicon-16x16.png" th:href="@{/favicon/favicon-16x16.png}" />
     </head>
 
     <body class="min-vh-100 d-flex flex-column align-items-center justify-content-center bg-main">
-        <!-- Основная часть страницы -->
-        <div class="container text-secondary">
-            <!-- Заголовок с названием и OID медицинского учреждения -->
-            <div class="row mb-5">
-                <div class="col-12 text-center word-wrap">
-                    <h1 class="fs-2 mb-3">
-                        Заявка на регистрацию медицинского учреждения
-                        <span th:text="'&quot;' + ${request.hospital.name} + '&quot;'" class="fw-bold">"Национальный медицинский исследовательский центр имени В. А. Алмазова"</span>
-                    </h1>
-                    <h2 class="fs-4">
-                        OID:
-                        <span th:text="${request.hospital.oid}" class="fw-bold">1.232.1445.455.78.1</span>
-                    </h2>
-                </div>
+        <!---->
+        <div th:replace="~{/fragments/headers/anon-header :: anon-header}"></div>
+
+        <div class="container my-5">
+            <!---->
+            <div class="row text-center mb-5">
+                <h1 class="text-dark fs-2 word-wrap">Заявка на регистрацию медицинского учреждения</h1>
             </div>
-            <!-- Информация о заявке -->
+
             <div class="row mb-5">
                 <div class="col-12">
-                    <div>
-                        <h3 class="fs-4">Кто подал</h3>
-                        <p class="fs-5 word-wrap">
-                            <span th:text="${request.lastname}">Иванов</span>
-                            <span th:text="${request.name}">Иван</span>
-                            <span th:text="${request.patronymic} + ', '">Иванович</span>
-                            <span th:text="${request.post}" class="text-lowercase fw-bold">Главврач</span>
-                        </p>
-                    </div>
-                    <hr />
-                    <div>
-                        <h3 class="fs-4">Данные</h3>
-                        <p class="fs-5 word-wrap">
-                            Серия и номер паспорта:
-                            <span th:text="${request.passport}" class="fw-bold">2812 928321</span>
-                            <br />
-                            Номер телефона:
-                            <span th:text="${request.phoneNumber}" class="fw-bold">+8 (921) 122-34-21</span>
-                        </p>
-                    </div>
-                    <hr />
-                    <div>
-                        <h3 class="fs-4">Почта для получения кода</h3>
-                        <p class="fs-5 break-all" th:text="${request.email}">someEmail@some</p>
-                    </div>
-                    <hr />
-                    <div>
-                        <h3 class="fs-4">Дата подачи</h3>
-                        <p class="fs-5" th:text="${request.date}">12.11.2001</p>
-                    </div>
+                    <form action="#" class="bg-dark border rounded text-gray-300 fs-5 p-3">
+                        <div class="d-flex align-items-center justify-content-between mb-0">
+                            <h2 class="fs-4 mb-0">Заявка</h2>
+                            <div>19.09.2021 в 15:12:14</div>
+                        </div>
+                        <hr class="text-white mb-1" />
+                        <div class="d-flex flex-row flex-wrap align-items-center justify-content-center mb-3">
+                            <div class="flex-grow-1 m-1">
+                                <label for="lastname" class="form-label">Фамилия</label>
+                                <input th:value="${request.lastname}" type="text" name="lastname" id="lastname" class="form-control" placeholder="Иванов" disabled />
+                            </div>
+                            <div class="flex-grow-1 m-1">
+                                <label for="name" class="form-label">Имя</label>
+                                <input th:value="${request.name}" type="text" name="name" id="name" class="form-control" placeholder="Иван" disabled />
+                            </div>
+                            <div class="flex-grow-1 m-1">
+                                <label for="patronymic" class="form-label">Отчество</label>
+                                <input th:value="${request.patronymic}" type="text" name="patronymic" id="patronymic" class="form-control" placeholder="Иванович" disabled />
+                            </div>
+                        </div>
+                        <div class="m-1 mb-3">
+                            <label for="hospital-name" class="form-label">Полное наименование медицинского учреждения</label>
+                            <input th:value="${request.hospital.name}" type="text" name="hospitalName" id="hospital-name" class="form-control" placeholder="Национальный медицинский исследовательский центр имени В. А. Алмазова" disabled />
+                        </div>
+                        <div class="m-1 mb-3">
+                            <label for="hospital-name" class="form-label">OID этого медицинского учреждения</label>
+                            <input th:value="${request.hospital.oid}" type="text" name="hospitalOid" id="hospital-oid" class="form-control" placeholder="1.23.49.123.4583" disabled />
+                        </div>
+                        <div class="m-1 mb-3">
+                            <label for="post" class="form-label">Должность заявителя</label>
+                            <input th:value="${request.post}" type="text" name="post" id="post" class="form-control" placeholder="Главный врач" disabled />
+                        </div>
+                        <div class="d-flex flex-row flex-wrap align-items-center justify-content-center mb-3">
+                            <div class="flex-grow-1 m-1">
+                                <label for="passport" class="form-label">Серия и номер паспорта</label>
+                                <input th:value="${request.passport}" type="text" name="passport" id="passport" class="form-control" placeholder="3012 981322" disabled />
+                            </div>
+                            <div class="flex-grow-1 m-1">
+                                <label for="phone-number" class="form-label">Номер телефона</label>
+                                <input th:value="${request.phoneNumber}" type="text" name="phoneNumber" id="phone-number" class="form-control" placeholder="890231214560" disabled />
+                            </div>
+                        </div>
+                        <div class="m-1 mb-3">
+                            <label for="email" class="form-label">Почта для получения кода</label>
+                            <input th:value="${request.email}" type="email" name="email" id="email" class="form-control" placeholder="example@mail.com" disabled />
+                        </div>
+                        <div th:if="${commentExists}" class="m-1 mb-4">
+                            <label for="comment" class="form-label">Комментарий к заявке</label>
+                            <textarea th:value="${request.comment}" name="comment" id="comment" class="form-control" rows="3" placeholder="Здесь вы можете написать, для чего вы оставляете данную заявку" disabled></textarea>
+                        </div>
+                        <hr class="text-white" />
+                        <div class="text-center" th:switch="${#strings.toString(request.hospital.currentState)}">
+                            <div th:case="'WAITING_CODE'" class="d-flex flex-row flex-wrap align-items-center justify-content-center">
+                                <button class="btn btn-lg btn-success m-2" data-bs-toggle="modal" data-bs-target="#code-generation-modal">Принять</button>
+                                <button class="btn btn-lg btn-danger m-2" id="decline-request">Отклонить</button>
+                            </div>
+                            <div th:case="'WAITING_REGISTRATION'" class="fs-2 fst-italic text-warning">Данное медицинское учреждение ожидает регистрацию администратора</div>
+                            <div th:case="'REGISTERED'" class="fs-2 fst-italic text-success">
+                                Данное медицинское учреждение было зарегистрировано
+                                <span th:text="${request.hospital.date}">19.12.2021 в 12:59:01</span>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
-            <!-- Кнопки (принять/отклонить) или текстовая информация в зависимости от текущего состояния медицинского учреждения -->
-            <div class="row">
-                <div class="col-12 text-center" th:switch="${#strings.toString(request.hospital.currentState)}">
-                    <div th:case="'WAITING_CODE'" class="d-flex flex-row flex-wrap align-items-center justify-content-center">
-                        <button class="btn btn-lg btn-success m-2" data-bs-toggle="modal" data-bs-target="#code-generation-modal">Принять</button>
-                        <button class="btn btn-lg btn-danger m-2" id="decline-request">Отклонить</button>
-                    </div>
-                    <div th:case="'WAITING_REGISTRATION'" class="fs-2 fst-italic text-warning">Данное медицинское учреждение ожидает регистрации администратора</div>
-                    <div th:case="'REGISTERED'" class="fs-2 fst-italic text-success">
-                        Данное медицинское учреждение было зарегистрировано
-                        <span th:text="${request.hospital.date}">19.12.2021 в 12:59:01</span>
-                    </div>
-                </div>
-            </div>
+            <!---->
         </div>
-        <!-- Модальное окно для генерации кода -->
+
         <div th:if="${#strings.toString(request.hospital.currentState)} == 'WAITING_CODE'" class="modal fade" id="code-generation-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
@@ -84,7 +100,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body fs-5" id="code-generation-modal-text">
-                        <form action="#" th:action="@{/rest/code-generation}" class="border rounded text-secondary fs-5 p-3" id="code-generation-form">
+                        <form action="#" th:action="@{/rest/security-codes/generate/by-main-admin}" class="border rounded text-secondary fs-5 p-3" id="code-generation-form">
                             <div class="mb-3">
                                 <label for="name" class="form-label">Медицинское учреждение</label>
                                 <input type="text" name="name" id="name" class="form-control" disabled th:value="${request.hospital.name}" />
@@ -118,12 +134,18 @@
                 </div>
             </div>
         </div>
-        <!-- Модальное окно для сообщений об ошибке -->
+
         <div th:replace="~{/fragments/modal/error-modal :: error-modal}"></div>
-        <!-- Модальное окно для сообщений об успехе -->
+
         <div th:replace="~{/fragments/modal/success-modal :: success-modal}"></div>
-        <!-- Скрипты -->
-        <script src="../../static/js/hospitals/hospital-registration-request.js" th:src="@{/js/hospitals/hospital-registration-request.js}"></script>
+
+        <div th:replace="~{/fragments/modal/code-input-modal :: code-input-modal}"></div>
+
+        <div th:replace="~{/fragments/footers/footer :: footer}"></div>
+
+        <script src="../../static/js/code-check.js" th:src="@{/js/code-check.js}"></script>
+        <script src="../../static/js/hospitals/hospital-registration-form.js" th:src="@{/js/hospitals/hospital-registration-form.js}"></script>
         <script src="../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
+        <!---->
     </body>
 </html>
