--- a/src/main/resources/templates/hospitals/hospital-registration-request.html
+++ b/src/main/resources/templates/hospitals/hospital-registration-request.html
@@ -27,7 +27,7 @@
                     <form action="#" class="bg-dark border rounded text-gray-300 fs-5 p-3">
                         <div class="d-flex align-items-center justify-content-between mb-0">
                             <h2 class="fs-4 mb-0">Заявка</h2>
-                            <div>19.09.2021 в 15:12:14</div>
+                            <div th:text="${request.formattedDate}">19.09.2021 в 15:12:14</div>
                         </div>
                         <hr class="text-white mb-1" />
                         <div class="d-flex flex-row flex-wrap align-items-center justify-content-center mb-3">
@@ -77,13 +77,13 @@
                         <hr class="text-white" />
                         <div class="text-center" th:switch="${#strings.toString(request.hospital.currentState)}">
                             <div th:case="'WAITING_CODE'" class="d-flex flex-row flex-wrap align-items-center justify-content-center">
-                                <button class="btn btn-lg btn-success m-2" data-bs-toggle="modal" data-bs-target="#code-generation-modal">Принять</button>
-                                <button class="btn btn-lg btn-danger m-2" id="decline-request">Отклонить</button>
+                                <button type="button" class="btn btn-lg btn-success m-2" data-bs-toggle="modal" data-bs-target="#code-generation-modal">Принять</button>
+                                <button type="button" class="btn btn-lg btn-danger m-2" id="decline-request">Отклонить</button>
                             </div>
                             <div th:case="'WAITING_REGISTRATION'" class="fs-2 fst-italic text-warning">Данное медицинское учреждение ожидает регистрацию администратора</div>
                             <div th:case="'REGISTERED'" class="fs-2 fst-italic text-success">
                                 Данное медицинское учреждение было зарегистрировано
-                                <span th:text="${request.hospital.date}">19.12.2021 в 12:59:01</span>
+                                <span th:text="${request.hospital.formattedDate}">19.12.2021 в 12:59:01</span>
                             </div>
                         </div>
                     </form>
@@ -97,7 +97,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h1 class="modal-title text-secondary fs-4" id="code-generation-modal-title">Генерация кода</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <button id="code-generation-modal-close" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body fs-5" id="code-generation-modal-text">
                         <form action="#" th:action="@{/rest/security-codes/generate/by-main-admin}" class="border rounded text-secondary fs-5 p-3" id="code-generation-form">
@@ -144,7 +144,7 @@
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
 
         <script src="../../static/js/code-check.js" th:src="@{/js/code-check.js}"></script>
-        <script src="../../static/js/hospitals/hospital-registration-form.js" th:src="@{/js/hospitals/hospital-registration-form.js}"></script>
+        <script src="../../static/js/hospitals/hospital-registration-request.js" th:src="@{/js/hospitals/hospital-registration-request.js}"></script>
         <script src="../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
         <!---->
     </body>
