--- a/src/main/resources/templates/fragments/modal/error-modal.html
+++ b/src/main/resources/templates/fragments/modal/error-modal.html
@@ -11,11 +11,11 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h1 class="modal-title fs-4" id="error-modal-title">Ошибка</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <button id="error-modal-close-1" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body fs-5" id="error-modal-text">Здесь располагается текст ошибки. Этот блок заполняется js-кодом.</div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                        <button id="error-modal-close-2" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
                     </div>
                 </div>
             </div>
