Создал datalist на странице формы заявки, сделал в черновом виде работу с этим datalist из js-кода. Написал черновой контроллер для проверки взятия данных с сервера.

--- a/src/main/resources/templates/hospitals/hospital-registration-form.html
+++ b/src/main/resources/templates/hospitals/hospital-registration-form.html
@@ -43,7 +43,8 @@
                         </div>
                         <div class="m-1 mb-3">
                             <label for="hospital-name" class="form-label">Полное наименование медицинского учреждения <span class="text-danger fs-6"> *</span></label>
-                            <input type="text" name="hospitalName" id="hospital-name" class="form-control" placeholder="Национальный медицинский исследовательский центр имени В. А. Алмазова" />
+                            <input list="hospitals" type="text" name="hospitalName" id="hospital-name" class="form-control" placeholder="Национальный медицинский исследовательский центр имени В. А. Алмазова" />
+                            <datalist id="hospitals"></datalist>
                         </div>
                         <div class="m-1 mb-3">
                             <label for="post" class="form-label">Ваша должность в этом медицинском учреждении <span class="text-danger fs-6"> *</span></label>
