--- a/src/main/resources/templates/hospitals/hospitals.html
+++ b/src/main/resources/templates/hospitals/hospitals.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 
 <html lang="ru" xmlns:th="https://www.thymeleaf.org">
     <head>
@@ -45,6 +45,82 @@
                                 </p>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
+</html>-->
+
+<!DOCTYPE html>
+
+<html lang="ru" xmlns:th="https://www.thymeleaf.org">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Медицинские учреждения</title>
+        <link href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
+        <link href="../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
+        <link rel="apple-touch-icon" sizes="180x180" href="../../static/favicon/apple-touch-icon.png" th:href="@{/favicon/apple-touch-icon.png}" />
+        <link rel="icon" type="image/png" sizes="32x32" href="../../static/favicon/favicon-32x32.png" th:href="@{/favicon/favicon-32x32.png}" />
+        <link rel="icon" type="image/png" sizes="16x16" href="../../static/favicon/favicon-16x16.png" th:href="@{/favicon/favicon-16x16.png}" />
+    </head>
+
+    <body class="min-vh-100 d-flex flex-column align-items-center justify-content-center bg-main">
+        <div class="container text-secondary my-5">
+            <div class="row text-center mb-5">
+                <div class="col-12">
+                    <h1 class="fs-2 word-wrap">Список медицинских учреждений</h1>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12">
+                    <div class="text-start">
+                        <p class="fs-4 mb-0 break-all">
+                            <svg class="mb-2" fill="#000000" width="24px" height="24px" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <path
+                                    d="M19.699219 1C17.665885 1 16 2.6658854 16 4.6992188L16 15.400391C16 17.433724 17.665885 19.099609 19.699219 19.099609L30.400391 19.099609C32.433724 19.099609 34.099609 17.433724 34.099609 15.400391L34.099609 4.6992188 A 1.0001 1.0001 0 0 0 34.097656 4.6328125C33.964738 2.6383346 32.334115 1 30.300781 1L19.699219 1 z M 19.699219 3L30.300781 3C31.265919 3 32.030467 3.7585597 32.099609 4.7617188L32.099609 15.400391C32.099609 16.367057 31.367057 17.099609 30.400391 17.099609L19.699219 17.099609C18.732552 17.099609 18 16.367057 18 15.400391L18 4.6992188C18 3.7325521 18.732552 3 19.699219 3 z M 24 6L24 9L21 9L21 11L24 11L24 14L26 14L26 11L29 11L29 9L26 9L26 6L24 6 z M 6.6992188 9C4.6592187 9 3 10.659219 3 12.699219L3 46L21 46L21 34L29 34L29 46L48 46L48 12.699219C48 10.659219 46.340781 9 44.300781 9L36.099609 9L36.099609 15.400391C36.099609 18.540391 33.540391 21.099609 30.400391 21.099609L19.699219 21.099609C16.559219 21.099609 14 18.540391 14 15.400391L14 9L6.6992188 9 z M 8 23L15 23L15 29L8 29L8 23 z M 21 23L29 23L29 29L21 29L21 23 z M 35 23L42 23L42 29L35 29L35 23 z M 8 34L15 34L15 40L8 40L8 34 z M 35 34L42 34L42 40L35 40L35 34 z"
+                                />
+                            </svg>
+                            <span>Национальный медицинский исследовательский центр имени В. А. Алмазова</span>
+                        </p>
+                        <p class="fs-5 mb-1">OID: 1.32.34.5.234.34213</p>
+                        <p class="fs-5 mb-0 text-success">Зарегистрировано 16.01.2022 в 17:12:54</p>
+                    </div>
+                </div>
+            </div>
+            <hr />
+            <div class="row">
+                <div class="col-12">
+                    <div class="text-start">
+                        <p class="fs-4 mb-0">
+                            <svg class="mb-2" fill="#000000" width="24px" height="24px" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <path
+                                    d="M19.699219 1C17.665885 1 16 2.6658854 16 4.6992188L16 15.400391C16 17.433724 17.665885 19.099609 19.699219 19.099609L30.400391 19.099609C32.433724 19.099609 34.099609 17.433724 34.099609 15.400391L34.099609 4.6992188 A 1.0001 1.0001 0 0 0 34.097656 4.6328125C33.964738 2.6383346 32.334115 1 30.300781 1L19.699219 1 z M 19.699219 3L30.300781 3C31.265919 3 32.030467 3.7585597 32.099609 4.7617188L32.099609 15.400391C32.099609 16.367057 31.367057 17.099609 30.400391 17.099609L19.699219 17.099609C18.732552 17.099609 18 16.367057 18 15.400391L18 4.6992188C18 3.7325521 18.732552 3 19.699219 3 z M 24 6L24 9L21 9L21 11L24 11L24 14L26 14L26 11L29 11L29 9L26 9L26 6L24 6 z M 6.6992188 9C4.6592187 9 3 10.659219 3 12.699219L3 46L21 46L21 34L29 34L29 46L48 46L48 12.699219C48 10.659219 46.340781 9 44.300781 9L36.099609 9L36.099609 15.400391C36.099609 18.540391 33.540391 21.099609 30.400391 21.099609L19.699219 21.099609C16.559219 21.099609 14 18.540391 14 15.400391L14 9L6.6992188 9 z M 8 23L15 23L15 29L8 29L8 23 z M 21 23L29 23L29 29L21 29L21 23 z M 35 23L42 23L42 29L35 29L35 23 z M 8 34L15 34L15 40L8 40L8 34 z M 35 34L42 34L42 40L35 40L35 34 z"
+                                />
+                            </svg>
+                            <span>Национальный медицинский исследовательский центр имени В. А. Алмазова</span>
+                        </p>
+                        <p class="fs-5 mb-1">OID: 1.32.34.5.234.34213</p>
+                        <p class="fs-5 mb-0 text-warning">Ожидает регистрацию администратора</p>
+                    </div>
+                </div>
+            </div>
+            <hr />
+            <div class="row">
+                <div class="col-12">
+                    <div class="text-start">
+                        <p class="fs-4 mb-0">
+                            <svg class="mb-2" fill="#000000" width="24px" height="24px" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <path
+                                    d="M19.699219 1C17.665885 1 16 2.6658854 16 4.6992188L16 15.400391C16 17.433724 17.665885 19.099609 19.699219 19.099609L30.400391 19.099609C32.433724 19.099609 34.099609 17.433724 34.099609 15.400391L34.099609 4.6992188 A 1.0001 1.0001 0 0 0 34.097656 4.6328125C33.964738 2.6383346 32.334115 1 30.300781 1L19.699219 1 z M 19.699219 3L30.300781 3C31.265919 3 32.030467 3.7585597 32.099609 4.7617188L32.099609 15.400391C32.099609 16.367057 31.367057 17.099609 30.400391 17.099609L19.699219 17.099609C18.732552 17.099609 18 16.367057 18 15.400391L18 4.6992188C18 3.7325521 18.732552 3 19.699219 3 z M 24 6L24 9L21 9L21 11L24 11L24 14L26 14L26 11L29 11L29 9L26 9L26 6L24 6 z M 6.6992188 9C4.6592187 9 3 10.659219 3 12.699219L3 46L21 46L21 34L29 34L29 46L48 46L48 12.699219C48 10.659219 46.340781 9 44.300781 9L36.099609 9L36.099609 15.400391C36.099609 18.540391 33.540391 21.099609 30.400391 21.099609L19.699219 21.099609C16.559219 21.099609 14 18.540391 14 15.400391L14 9L6.6992188 9 z M 8 23L15 23L15 29L8 29L8 23 z M 21 23L29 23L29 29L21 29L21 23 z M 35 23L42 23L42 29L35 29L35 23 z M 8 34L15 34L15 40L8 40L8 34 z M 35 34L42 34L42 40L35 40L35 34 z"
+                                />
+                            </svg>
+                            <span>Национальный медицинский исследовательский центр имени В. А. Алмазова</span>
+                        </p>
+                        <p class="fs-5 mb-1">OID: 1.32.34.5.234.34213</p>
+                        <p class="fs-5 mb-0 text-danger">Ожидает выдачу кода</p>
                     </div>
                 </div>
             </div>
