Добавил debounce-функцию в js-код.

--- a/src/main/resources/templates/hospitals/hospital-registration-form.html
+++ b/src/main/resources/templates/hospitals/hospital-registration-form.html
@@ -44,7 +44,7 @@
                         <div class="m-1 mb-3">
                             <label for="hospital-name" class="form-label">Полное наименование медицинского учреждения <span class="text-danger fs-6"> *</span></label>
                             <input list="hospitals" type="text" name="hospitalName" id="hospital-name" class="form-control" placeholder="Национальный медицинский исследовательский центр имени В. А. Алмазова" />
-                            <datalist id="hospitals"></datalist>
+                            <ul id="hospitals" role="listbox" class="list-group fs-5 mt-2"></ul>
                         </div>
                         <div class="m-1 mb-3">
                             <label for="post" class="form-label">Ваша должность в этом медицинском учреждении <span class="text-danger fs-6"> *</span></label>
